# MaxAgent

./: .gitignore  PROJECT_STATUS.md  README.md  RECONNECTION_GUIDE.md  self_update.py
MacAgentApp/: Podfile  权限持久化说明.md
backend/: agent_config.py  app_state.py  auth.py  connection_manager.py  github_config.py  install.sh  llm_config.py  main.py  paths.py  requirements-core.txt  requirements-langchain.txt  requirements.txt  smtp_config.py  start.sh  task_persistence.py  ws_handler.py
backend/douyin_reply_system/: README.md  pyproject.toml
backend/douyin_reply_system/douyin_reply_system/: __init__.py  main.py
docs/: AGENT_DUCK_TASK_ARCHITECTURE.md  API-Endpoints.md  Agent-Live-可视化改造方案.md  Agent-Live-多任务展示方案探讨.md  Agent-Live-视觉模块设计.md  CAPSULE_LOCAL.md  CAPSULE_SOURCES.md  CHOWDUCK_FLOW_AND_TASK_ANALYSIS.md  ChowDuck-分身Agent实施步骤.md  DAG_RUNTIME.md  DOCKER_RPC_ISOLATION.md  ERROR_RECOVERY_DESIGN.md  EVOLUTION_DOCS_INDEX.md  EVOLUTION_FIX_2025.md  EVOLUTION_SUMMARY_AND_ACTION_PLAN.md  Egg-UI操作方案.md  FOLLOWUP_QUERY_DETECTION.md  GITHUB_SETUP_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  Mac-App-UI-Guide.md  QUICK_MAP.md  QUICK_REFERENCE_CARD.md  QUICK_START_GUIDE.md  README.md  ROADMAP_2026_BENCHMARK_AGENT.md  RPA_RUNBOOK_FEATURE_REVIEW.md  RUNTIME_ABSTRACTION_LAYER.md  SYSTEM_AUDIT_REPORT_2025.md  TASKCONTEXT_ENHANCEMENT_PATCH.md  TOOL_SELF_UPGRADE_DESIGN.md  TOOL_SELF_UPGRADE_TEST.md  TTS语音朗读设计方案.md  UPGRADE_SECURITY_DESIGN.md  V3.1_PLAN.md  V3_UPGRADE.md  V3_UPGRADE_CHECK.md  Web端功能拆分文档.md  backend-structure.md  chow_duck_agent_design.docx  enterprise-query-guard.md  (+19 more)
(+2173 files in other folders)
